[package]
name = "tokio-tls-gmssl"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.0"
edition = "2018"
authors = ["Jason Honor<jasonhonor@outlook.com>"]
license = "MIT"
repository = "https://github.com/acovo/tokio-tls-gmssl"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tokio-tls-gmssl"
description = """
An implementation of TLS/SSL streams for Tokio using native-tls giving an implementation of TLS
for nonblocking I/O streams.
"""
categories = ["asynchronous", "network-programming"]

[features]
vendored = ["native-tls-gmssl/vendored"]

[dependencies]
native-tls-gmssl = { git = "https://github.com/tujili2022/native_tls_gmssl.git", branch = "main"}
tokio = "1.0"


[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "io-util", "net"] }
cfg-if = "1.0"
env_logger = { version = "0.10", default-features = false }
futures = { version = "0.3.0", features = ["async-await"] }

tempfile = "3.1"
lazy_static = "1.4.0"

[package.metadata.docs.rs]
all-features = true
